More security fixes

--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "mixin-deep": ">=1.3.2",
     "pug-cli": "^1.0.0-alpha6",
     "set-value": ">=2.0.1",
-    "testcafe": "^15.1.317922"
+    "testcafe": "^15.1.317922",
+    "ws": ">=3.3.1",
+    "express": ">=3.11.0",
+    "useragent": ">=2.1.13",
+    "ejs": ">=2.5.5",
+    "moment": ">=2.19.3"
   }
 }
